# svVascularize

./: .gitignore  CAD_GUI_DOCUMENTATION.md  CAD_GUI_SUMMARY.md  CREASE_DETECTION_IMPROVEMENTS.md  Copyright-Notice.txt  FIX_LLVM_MISMATCH.sh  GUI_FEATURES.md  GUI_IMPROVEMENTS.md  GUI_QUICK_START.md  GUI_TROUBLESHOOTING.md  GUI_UPGRADE_SUMMARY.md  MANIFEST.in  OPENGL_FIX_SUMMARY.md  OPENGL_TROUBLESHOOTING.md  README.md  STYLE_COMPARISON.md  UBUNTU_20.04_SETUP.md  biventricle_tissue.stl  cube_with_holes.vtu  environment-gui-linux.yml  environment-gui.yml  install_mesa.sh  launch_gui.sh  launch_gui_conda.sh  launch_gui_fallback.py  launch_gui_safe.py  launch_gui_system_mesa.sh  launch_gui_xvfb.sh  pyproject.toml  requirements.txt  setup.py  setup_mesa_conda.sh
binder/: postBuild  requirements.txt
docs/: algorithm.html  doc.html  gui.html  index.html  install.html  parameter_space.html  pipeline.html  playground.js  quickstart.html  script.js  style.css
scripts/: validate_gui_contrast.py
svv/: __init__.py  telemetry.py
svv_accel/: __init__.py
test/: conftest.py  test_allocate.py  test_base_curve.py  test_beziercurve.py  test_boolean.py  test_c_allocate.py  test_c_distance.py  test_c_sample.py  test_catmullrom_curve.py  test_curve.py  test_dmn_io.py  test_gui_activation_policy.py  test_gui_vtk_platform_guard.py  test_h_matrix.py  test_m_matrix.py  test_n_matrix.py  test_numexpr_fallback.py  test_nurbs_curve.py  test_remesh_surface.py  test_simulation_spline_constrained_mesh.py  test_solver_0d_selector.py  test_spline_export_files.py  test_tetgen_cli_selector.py  (+5 more)
(+151 files in other folders)
